--- a/dada/DADA/Template/templates/view_list_prev_next_table.tmpl
+++ b/dada/DADA/Template/templates/view_list_prev_next_table.tmpl
@@ -8,7 +8,7 @@
 	  <td>
 	   <p>
 	    <a href="<!-- tmpl_var name="S_PROGRAM_URL" -->?f=<!-- tmpl_var flavor default="view_list" -->&amp;start=<!-- tmpl_var name="previous_screen" -->&amp;length=<!-- tmpl_var name="view_list_subscriber_number" -->&amp;type=<!-- tmpl_var type -->&amp;keyword=<!-- tmpl_var keyword escape="HTML"-->">
-	     &lt;- previous <!-- tmpl_var name="view_list_subscriber_number" -->
+	     &lt;- previous <!-- tmpl_var list_settings.view_list_subscriber_number -->
 	    </a>
 	   </p>
 	  </td>
@@ -20,7 +20,7 @@
 	  <td  align="right">
 	   <p>
 	    <a href="<!-- tmpl_var name="S_PROGRAM_URL" -->?f=<!-- tmpl_var flavor default="view_list" -->&amp;start=<!-- tmpl_var name="next_screen" -->&amp;length=<!-- tmpl_var name="view_list_subscriber_number" -->&amp;type=<!-- tmpl_var type -->&amp;keyword=<!-- tmpl_var keyword escape="HTML"-->">
-	     next <!-- tmpl_var name="view_list_subscriber_number" --> -&gt;
+	     next <!-- tmpl_var list_settings.view_list_subscriber_number --> -&gt;
 	    </a>
 	   </p>
 	  </td>
