--- a/dada/DADA/Template/templates/list_type_switch_widget.tmpl
+++ b/dada/DADA/Template/templates/list_type_switch_widget.tmpl
@@ -2,7 +2,7 @@
 <div id="centeredmenu">
 		<ul>
 			<li <!-- tmpl_if EXPR="(type eq 'list')" --> class="active" <!-- /tmpl_if -->>
-				<a href="<!-- tmpl_var PROGRAM_NAME-->?f=<!-- tmpl_var flavor -->&amp;type=list&keyword=<!-- tmpl_var keyword escape="HTML" -->">
+				<a href="<!-- tmpl_var PROGRAM_NAME-->?f=<!-- tmpl_var flavor -->;type=list;query=<!-- tmpl_var query escape="HTML" -->">
 				  <span>
 					Subscribers  (<!-- tmpl_var list_subscribers_num -->)
 				  </span>
@@ -14,7 +14,7 @@
 			<!-- tmpl_if flavor_is_view_list --> 
 				<!-- tmpl_if list_settings.enable_subscription_approval_step -->
 					<li <!-- tmpl_if EXPR="(type eq 'sub_request_list')" --> class="active" <!-- /tmpl_if -->>
-					<a href="<!-- tmpl_var PROGRAM_NAME-->?f=<!-- tmpl_var flavor -->&amp;type=sub_request_list&keyword=<!-- tmpl_var keyword escape="HTML" -->">
+					<a href="<!-- tmpl_var PROGRAM_NAME-->?f=<!-- tmpl_var flavor -->;type=sub_request_list;query=<!-- tmpl_var query escape="HTML" -->">
 					  <span>
 						Subscription Requests  (<!-- tmpl_var sub_request_list_subscribers_num -->)
 					  </span>
@@ -25,7 +25,7 @@
 			
 			
 			<li <!-- tmpl_if EXPR="(type eq 'black_list')" --> class="active" <!-- /tmpl_if -->>
-			<a href="<!-- tmpl_var PROGRAM_NAME-->?f=<!-- tmpl_var flavor -->&amp;type=black_list&keyword=<!-- tmpl_var keyword escape="HTML" -->">
+			<a href="<!-- tmpl_var PROGRAM_NAME-->?f=<!-- tmpl_var flavor -->;type=black_list;query=<!-- tmpl_var query escape="HTML" -->">
 				<span>
 			   		Black List (<!-- tmpl_var black_list_subscribers_num -->)
 				</span>
@@ -34,7 +34,7 @@
 			
 			<li <!-- tmpl_if EXPR="(type eq 'white_list')" --> class="active" <!-- /tmpl_if -->>
 			
-			<a href="<!-- tmpl_var PROGRAM_NAME-->?f=<!-- tmpl_var flavor -->&amp;type=white_list&keyword=<!-- tmpl_var keyword escape="HTML" -->">
+			<a href="<!-- tmpl_var PROGRAM_NAME-->?f=<!-- tmpl_var flavor -->;type=white_list;query=<!-- tmpl_var query escape="HTML" -->">
 			   <span>
 				White List (<!-- tmpl_var white_list_subscribers_num -->)
 			    </span>
@@ -43,7 +43,7 @@
 			
 			<!-- tmpl_if list_settings.enable_authorized_sending -->
 				<li <!-- tmpl_if EXPR="(type eq 'authorized_senders')" --> class="active" <!-- /tmpl_if -->>
-				  <a href="<!-- tmpl_var PROGRAM_NAME-->?f=<!-- tmpl_var flavor -->&amp;type=authorized_senders&keyword=<!-- tmpl_var keyword escape="HTML" -->">
+				  <a href="<!-- tmpl_var PROGRAM_NAME-->?f=<!-- tmpl_var flavor -->;type=authorized_senders;query=<!-- tmpl_var query escape="HTML" -->">
 				   <span>
 					Authorized Senders (<!-- tmpl_var authorized_senders_num -->)
 			   	  </span>
@@ -56,7 +56,7 @@
 				<!-- tmpl_if show_bounced_list -->
 				<li <!-- tmpl_if EXPR="(type eq 'bounced_list')" --> class="active" <!-- /tmpl_if -->>
 				
-					<a href="<!-- tmpl_var PROGRAM_NAME-->?f=<!-- tmpl_var flavor -->&amp;type=bounced_list&keyword=<!-- tmpl_var keyword escape="HTML" -->">
+					<a href="<!-- tmpl_var PROGRAM_NAME-->?f=<!-- tmpl_var flavor -->;type=bounced_list;query=<!-- tmpl_var query escape="HTML" -->">
 					 <span>
 						Bouncing Addresses (<!-- tmpl_var bounced_list_num -->)
 					</span>  
