--- a/dada/DADA/Template/templates/view_list_screen.tmpl
+++ b/dada/DADA/Template/templates/view_list_screen.tmpl
@@ -4,7 +4,7 @@
 
 <!-- tmpl_include help_link_widget.tmpl --> 
 
-<!-- tmpl_include list_type_switch_widget.tmpl -->
+
 
 
 <!-- some sort of dialogue box-y looking thing... --> 
@@ -46,6 +46,7 @@
 
 <!-- /some sort of dialogue box-y looking thing... --> 
 
+<!-- tmpl_include list_type_switch_widget.tmpl -->
 
 <p>&nbsp;</p> 
 
@@ -73,14 +74,14 @@
 	
 	<!-- /tmpl_if --> 
 	
-<!-- tmpl_if --> 
+<!-- tmpl_if comment --> 
 
 
-					<!-- tmpl_if list_type_isa_list -->
+					<!-- tmpl_if EXPR="(type eq 'list')" -->
 	
 					<!--/tmpl_if-->
 
-					<!-- tmpl_if list_type_isa_authorized_senders -->
+					<!-- tmpl_if EXPR="(type eq 'authorized_senders')" -->
 	
 						<p>
 						 This shows all email addresses that are allowed to send messages to the list (via the Dada Bridge Plugin) other than the list owner (for announce-only lists) and without moderation. 
@@ -89,7 +90,7 @@
 					<!--/tmpl_if-->
 
 
-					<!-- tmpl_if list_type_isa_white_list -->
+					<!-- tmpl_if EXPR="(type eq 'white_list')" -->
 	
 
 						<p>
@@ -98,7 +99,7 @@
 	
 					<!--/tmpl_if-->
 
-					<!-- tmpl_if list_type_isa_black_list -->
+					<!-- tmpl_if EXPR="(type eq 'black_list')" -->
 
 						<p class="alert">
 						 Your Black List is a set of rules that say who is not allowed to subscribe to 
@@ -142,7 +143,7 @@
 					<!--/tmpl_if-->
 
 
-					<!-- tmpl_if list_type_isa_bounced_list -->
+					<!-- tmpl_if EXPR="(type eq 'bounced_list')" -->
 	
 
 						<p>
@@ -155,25 +156,34 @@
 <!-- /tmpl_if -->
 
 
-<!-- tmpl_unless num_subscribers -->
+<!-- tmpl_unless total_num -->
 	
-	<p class="alert">
-	 Currently, there are no <!-- tmpl_var type_title -->.
+	<!-- tmpl_if query --> 
+			<p class="alert">
+				No Results were found.
+			</p>
+			
+	<!-- tmpl_else --> 
 	
-	    <!-- tmpl_if EXPR="((type eq 'list') || (type eq 'black_list') || (type eq 'authorized_senders') || (type eq 'white_list'))" -->
+		<p class="alert">
+		 Currently, there are no <!-- tmpl_var type_title -->.
+	
+		    <!-- tmpl_if EXPR="((type eq 'list') || (type eq 'black_list') || (type eq 'authorized_senders') || (type eq 'white_list'))" -->
 		
-			<a href="<!-- tmpl_var S_PROGRAM_URL -->?f=add&amp;type=<!-- tmpl_var type -->">
-	     			<!-- tmpl_if list_type_isa_list -->
-						Invite
-						<!-- tmpl_if list_settings.enable_mass_subscribe -->
-				/ Add
+				<a href="<!-- tmpl_var S_PROGRAM_URL -->?f=add&amp;type=<!-- tmpl_var type -->">
+					<!-- tmpl_if EXPR="(type eq 'list')" -->
+							Invite
+							<!-- tmpl_if list_settings.enable_mass_subscribe -->
+					/ Add
+							<!-- /tmpl_if -->
+						<!-- tmpl_else --> 
+							Add
 						<!-- /tmpl_if -->
-					<!-- tmpl_else --> 
-						Add
-					<!-- /tmpl_if -->
-	    	</a>
-	   	<!-- /tmpl_if -->
-	</p>
+		    	</a>
+		   	<!-- /tmpl_if -->
+		</p>
+	
+	<!-- /tmpl_if --> 
 	
 <!-- tmpl_else -->
 
@@ -181,21 +191,47 @@
 	 <tr>
 	  <td valign="bottom">
 	   <br />
-	    <!-- tmpl_var type_title -->
+
+
+	<!-- tmpl_if query --> 
+ 		Search Results 
+	
+			<strong>
+		     <!-- tmpl_var first -->
+		    </strong>
+		    to 
+		    <strong>
+		     <!-- tmpl_var last -->
+		    </strong>
+			of
+			<strong>
+				<!-- tmpl_var total_num --> 
+		   </strong>
+		
+		  for, <em><!-- tmpl_var query escape=HTML --></em>
+		
+
+
+
+	<!-- tmpl_else --> 
+	
+   	 <!-- tmpl_var type_title -->
 	    <strong>
-	     <!-- tmpl_var name="screen_start" -->
+	     <!-- tmpl_var first -->
 	    </strong>
 	    to 
 	    <strong>
-	     <!-- tmpl_var name="screen_finish" -->
+	     <!-- tmpl_var last -->
 	    </strong>
 		of
 		<strong>
 			<!-- tmpl_var num_subscribers --> 
 	   </strong>
+
+	
 		<!-- tmpl_if EXPR="((type eq 'list') || (type eq 'black_list') || (type eq 'authorized_senders') || (type eq 'white_list'))" -->
 			<a href="<!-- tmpl_var S_PROGRAM_URL -->?f=add&amp;type=<!-- tmpl_var type -->">
-	     			<!-- tmpl_if list_type_isa_list -->
+					<!-- tmpl_if EXPR="(type eq 'list')" -->
 						Invite
 						<!-- tmpl_if list_settings.enable_mass_subscribe -->
 				/ Add
@@ -205,20 +241,20 @@
 					<!-- /tmpl_if -->
 	    	</a>...
 	   	<!-- /tmpl_if -->
-	  </td>
-<!-- tmpl_if comment --> 
-	  <td align="right" valign="bottom">
-	   <p>
-	    Total number of <!-- tmpl_var type_title -->:
-	    <strong>
-	     <!-- tmpl_var name="num_subscribers" -->
-	    </strong>
-		
-		</p>
-	  </td>
-<!-- /tmpl_if --> 
+
+	<!-- /tmpl_if -->
 	
-	<td align="right">
+
+	
+	  </td>
+	
+	<td align="center" valign="bottom">
+		<br />
+		<!-- tmpl_include view_list_slide_nav_widget.tmpl -->
+	</td>
+
+	
+	<td align="right" valign="bottom">
 		<!-- tmpl_include list_search_form_widget.tmpl --> 
 	</td> 
 	
@@ -229,8 +265,7 @@
 	<form name="email_form" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post">
 	
 	 	<!-- tmpl_include view_list_table_widget.tmpl --> 
-		
-	 <!-- tmpl_include view_list_prev_next_table.tmpl -->
+	
 	<table cellpadding="2" cellspacing="0" border="0" width="100%" style="background-color:#fff">
 	  <tr>
 	   		<td width="25">
@@ -290,7 +325,7 @@
 
 
 
-<!-- tmpl_if list_type_isa_black_list -->
+<!-- tmpl_if EXPR="(type eq 'black_list')" -->
 
 	<!-- tmpl_if can_filter_subscribers_through_blacklist --> 
 	
@@ -409,7 +444,7 @@
 <!--/tmpl_if-->
 
 
-<!-- tmpl_if list_type_isa_white_list -->
+<!-- tmpl_if EXPR="(type eq 'white_list')" -->
 	
 	<fieldset>
 
@@ -458,6 +493,7 @@
 <!-- tmpl_if num_subscribers -->
 
 
+<br />
 	<!-- tmpl_include list_download_widget.tmpl -->
 	
 
