--- a/dada/DADA/Template/templates/subscription_options_screen.tmpl
+++ b/dada/DADA/Template/templates/subscription_options_screen.tmpl
@@ -52,9 +52,110 @@
   </td>
  </tr>
 </table>
-<p>&nbsp;</p>
+</fieldset>
 
 
+
+<fieldset>
+ <legend>
+	  Black List Options
+ </legend>
+	 <table>
+	   <tr>
+	    <td>
+	     <p>
+	      <input type="checkbox" name="black_list" id="black_list" value="1" <!-- tmpl_if list_settings.black_list -->checked="checked"<!--/tmpl_if--> />
+	     </p>
+	    </td>
+	    <td>
+	     <p>
+	      <label for="black_list">
+	       Activate Black List
+	      </label>
+	     </p>
+		<table> 
+			 <tr>
+			    <td>
+			     <p>
+			      <input type="checkbox" name="add_unsubs_to_black_list" id="add_unsubs_to_black_list" value="1" <!-- tmpl_if list_settings.add_unsubs_to_black_list -->checked="checked"<!--/tmpl_if--> />
+			     </p>
+			    </td>
+			    <td>
+			     <p>
+			      <label for="add_unsubs_to_black_list">
+			       Move Addresses to the Black List after they are Removed/Unsubscribed.
+			      </label>
+			     </p>
+			    </td>
+			   </tr>
+			   <tr>
+			    <td>
+			     <p>
+			      <input type="checkbox" name="allow_blacklisted_to_subscribe" id="allow_blacklisted_to_subscribe" value="1" <!-- tmpl_if list_settings.allow_blacklisted_to_subscribe -->checked="checked"<!--/tmpl_if--> />
+			     </p>
+			    </td>
+			    <td>
+			     <p>
+			      <label for="allow_blacklisted_to_subscribe">
+			       Continue to Allow Black Listed Addresses to Subscribe Themselves
+			      </label>
+			     </p>
+			    </td>
+			   </tr>
+
+			<!-- tmpl_if ENFORCE_CLOSED_LOOP_OPT_IN --> 
+				<!-- ... --> 
+			<!-- tmpl_else --> 
+			
+				   <tr>
+				    <td>
+				     <p>
+				      <input type="checkbox" name="allow_admin_to_subscribe_blacklisted" id="allow_admin_to_subscribe_blacklisted" value="1" <!-- tmpl_if list_settings.allow_admin_to_subscribe_blacklisted -->checked="checked"<!--/tmpl_if--> />
+				     </p>
+				    </td>
+				    <td>
+				     <p>
+				      <label for="allow_admin_to_subscribe_blacklisted">
+				       Continue to Allow Black Listed Addresses to be Invited/Subscribed Via The List Control Panel. 
+				      </label>
+					  <br />
+					  Black Listed Addresses will just need to be manually, checked/selected to be Invited/Subscribed.  
+				     </p>
+				   </td>
+				  </tr>
+			
+			<!-- /tmpl_if --> 
+			
+			</table> 
+	    </td>
+	   </tr>
+	  
+	 </table>
+
+</fieldset>
+
+
+
+<fieldset>
+	 <legend>
+      White List Options
+	 </legend>
+	 <table>
+	   <tr>
+	    <td>
+	     <p>
+	      <input type="checkbox" name="enable_white_list" id="enable_white_list" value="1" <!-- tmpl_if list_settings.enable_white_list -->checked="checked"<!--/tmpl_if--> />
+	     </p>
+	    </td>
+	    <td>
+	     <p>
+	      <label for="enable_white_list">
+	       Activate White List
+	      </label>
+	     </p>
+	    </td>
+	   </tr>
+      </table>
 </fieldset>
 	
 <input type="hidden" name="process" value="1" />
