--- a/dada/DADA/Template/templates/add_email_screen.tmpl
+++ b/dada/DADA/Template/templates/add_email_screen.tmpl
@@ -4,7 +4,7 @@
 <p>
 Manage Subscribers (<!-- tmpl_var type_title -->) 
 &#187; 
-<!-- tmpl_if list_type_isa_list -->
+<!-- tmpl_if expr="(type eq 'list')" --> 
 	Invite
 	<!-- tmpl_if list_settings.enable_mass_subscribe -->
 		/ Add
@@ -15,7 +15,7 @@ Manage Subscribers (<!-- tmpl_var type_title -->)
 &#187; 
  <strong>Verify</strong>
 &#187;
-<!-- tmpl_if list_type_isa_list -->
+<!-- tmpl_if expr="(type eq 'list')" --> 
 	Send Invitation
 	<!-- tmpl_if list_settings.enable_mass_subscribe -->
 		/ Subscribe
@@ -25,24 +25,25 @@ Manage Subscribers (<!-- tmpl_var type_title -->)
 <!-- /tmpl_if -->
 </p>
 
+<!-- tmpl_if expr="(type eq 'list')" --> 
+	<!-- tmpl_if going_over_quota -->
+		<p class="error">
+		 Warning! You cannot subscribe all the addresses that you have submitted,
+		 since you will go over your subscription limit of <!-- tmpl_var list_settings.subscription_quota -->
+		 subscribers. Please resubmit a smaller number of addresses to subscribe.
+		</p>
+	<!--/tmpl_if-->
+<!-- /tmpl_if --> 
 
-<!-- tmpl_if going_over_quota -->
-	<p class="error">
-	 Warning! You cannot subscribe all the addresses that you have submitted,
-	 since you will go over your subscription limit of <!-- tmpl_var list_settings.subscription_quota -->
-	 subscribers. Please resubmit a smaller number of addresses to subscribe.
-	</p>
-<!--/tmpl_if-->
 
-
-<!-- tmpl_if list_type_isa_list -->
+<!-- tmpl_if expr="(type eq 'list')" --> 
 	<!-- tmpl_if list_settings.closed_list -->
 		<!-- tmpl_unless list_settings.enable_mass_subscribe -->
 		 <div style="background:#fcc;margin:5px;padding:5px;text-align:center">
 		 <h1>Warning!</h1> 
 		 <p>
-		 	You currently have a <strong>closed list</strong> and subscribing members via the list 
-			control panel is <strong>disabled</strong>. Subscribers will not be able to 
+		 	You currently have a <strong>Closed List</strong> and subscribing members via the list 
+			control panel is <strong>Disabled</strong>. Subscribers will not be able to 
 			confirm any list invitations that you send. 
 			 </p> 
 			</div> 
@@ -53,16 +54,13 @@ Manage Subscribers (<!-- tmpl_var type_title -->)
 
 
 <form name="email_form" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->">
- <input type="hidden" name="f"       value="add_email" />
- <input type="hidden" name="type"    value="<!-- tmpl_var type -->" />
- 
+ <input type="hidden" name="f"              value="add_email" />
+ <input type="hidden" name="type"           value="<!-- tmpl_var type -->" />
+ <input type="hidden" name="return_to"      value="<!-- tmpl_var return_to -->" />
+ <input type="hidden" name="return_address" value="<!-- tmpl_var return_address -->" />
  
 
 <!-- tmpl_if not_subscribed -->
-	 
-	 
-	
-
 
 <fieldset> 
  <legend>
@@ -552,28 +550,25 @@ Invalid Email Addresses
 
 
 	 <div class="buttonfloat">
-	  <input type="button" class="cautionary" value="<< Re-Enter Email List" onclick="history.back();return false;" />
+	  <input type="button" class="cautionary" value="<< Re-Enter Addresses" onclick="history.back();return false;" />
 
-	<!-- tmpl_if list_type_isa_list --> 
+	<!-- tmpl_if expr="(type eq 'list')" --> 
 	  <input type="submit"  name="process" value="Send Invitation... >>" <!-- tmpl_if list_settings.closed_list -->disabled="disabled" class="disabled"<!-- tmpl_else -->class="processing"<!-- /tmpl_if --> />
 	<!-- /tmpl_if -->
 
-	<!-- tmpl_if list_type_isa_list --> 
+	<!-- tmpl_if expr="(type eq 'list')" --> 
 		<!-- tmpl_if ENFORCE_CLOSED_LOOP_OPT_IN --> 
 			<!-- ... --> 
 		<!-- tmpl_else --> 
-			<input type="submit" <!-- tmpl_unless list_settings.enable_mass_subscribe -->disabled="disabled" class="disabled"<!-- tmpl_else -->class="processing"<!-- /tmpl_unless -->  name="process"  value="Subscribe Checked Subscribers >>" onclick="return warnAboutMassSubscription(this.form);" />	
+			<input type="submit" <!-- tmpl_unless list_settings.enable_mass_subscribe -->disabled="disabled" class="disabled"<!-- tmpl_else -->class="processing"<!-- /tmpl_unless -->  name="process"  value="Subscribe Checked Addresses >>" onclick="return warnAboutMassSubscription(this.form);" />	
 		<!-- /tmpl_if --> 
 	<!-- tmpl_else --> 
-		<input type="submit" class="processing" name="process"  value="Subscribe Checked Subscribers >>" />
+		<input type="submit" class="processing" name="process"  value="Add Checked Addresses to <!-- tmpl_var type_title --> >>" />
 	<!-- /tmpl_if -->
 	 </div>
 	 <div class="floatclear"></div>
 
-
-
-
-	<!-- tmpl_if list_type_isa_list --> 
+	<!-- tmpl_if expr="(type eq 'list')" --> 
 		<!-- tmpl_if ENFORCE_CLOSED_LOOP_OPT_IN -->
 
 		<!-- tmpl_else --> 
