--- a/dada/DADA/Template/templates/view_list_table_widget.tmpl
+++ b/dada/DADA/Template/templates/view_list_table_widget.tmpl
@@ -130,23 +130,18 @@
 		
 	 	
 		<!-- tmpl_if expr="(type eq 'bounced_list')" -->
-	
-			<a href="<!-- tmpl_var S_PROGRAM_URL -->?f=view_bounce_history;email=<!-- tmpl_var email ESCAPE=URL -->" title="Bounce Log for <!-- tmpl_var email escape=HTML -->" onclick="Modalbox.show(this.href, {title: this.title, width: 640, height:480}); return false;	"><!-- tmpl_var email --></a>
-		
-		<!-- tmpl_else --> 
-		
-			<!-- tmpl_unless no_email_links --> 
-    
+			<a href="<!-- tmpl_var S_PROGRAM_URL -->?f=view_bounce_history;email=<!-- tmpl_var email ESCAPE=URL -->" title="Bounce Log for <!-- tmpl_var email escape=HTML -->" onclick="Modalbox.show(this.href, {title: this.title, width: 640, height:480}); return false;	">
+			 <!-- tmpl_var email -->
+		    </a>
+		<!-- /tmpl_if --> 
+		<!-- tmpl_if expr="(no_email_links != 1)" -->
 			<a href="<!-- tmpl_var S_PROGRAM_URL -->?f=edit_subscriber;email=<!-- tmpl_var email -->;type=<!-- tmpl_var type -->;page=<!-- tmpl_var page -->;query=<!-- tmpl_var query -->;order_by=<!-- tmpl_var order_by -->;order_dir=<!-- tmpl_var order_dir -->;query=<!-- tmpl_var query -->" >
-		       <!-- tmpl_var email -->  
-		      </a>
-    
-			<!-- tmpl_else --> 
-		    	<!-- tmpl_var email -->
-			<!-- /tmpl_unless--> 
-			
+				<!-- tmpl_var email --> 
+			</a>
+		<!-- tmpl_else -->
+				<!-- tmpl_var email --> 
 		<!-- /tmpl_if -->
-	 	</p>
+ 	 	</p>
 	    </td>
 	    
 	    <!-- tmpl_loop fields --> 
